--- a/css/framework.css
+++ b/css/framework.css
@@ -79,14 +79,18 @@ main {
     ========================================================================== */
 
     #header-primary-wrapper {
+        background-color: rgb(27,36,37);
         width:100%;
         height:50px;
         position: fixed;
         left:0;
         top:0;
         z-index: 1000;
-        -webkit-transition:-webkit-transform .6s cubic-bezier(0.77, 0, 0.175, 1);
-                transition:transform .6s cubic-bezier(0.77, 0, 0.175, 1);
+        -webkit-transition:all .6s cubic-bezier(1, 0, 0, 1);
+                transition:all .6s cubic-bezier(1, 0, 0, 1);
+    }
+    #header-primary-wrapper[data-pos="on-hero"] {
+        height:80px;
     }
     #header-primary-wrapper.hidden {
         -webkit-transform:translate3d(0,-50px,0);
@@ -98,8 +102,18 @@ main {
 
     /*  LOGO
         ========================================================================== */
+        #header-primary-wrapper[data-pos="on-hero"] #logo {
+            opacity: 0;
+            -webkit-transform:translate3d(0,-80px,0);
+                    transform:translate3d(0,-80px,0);
 
+        }
         #logo {
+            opacity: 1;
+            -webkit-transform:translate3d(0,0,0);
+                    transform:translate3d(0,0,0);
+            -webkit-transition:all .6s cubic-bezier(1, 0, 0, 1);
+                    transition:all .6s cubic-bezier(1, 0, 0, 1);
             
         }
         #logo svg {
@@ -186,7 +200,7 @@ main {
                 display: block;
             }
             #nav-primary {
-                background-color:rgba(0,0,0,.85);
+                background-color:rgb(27,36,37);
                 position:fixed;
                 width:100%;
                 height:100%;
@@ -194,6 +208,12 @@ main {
                 right:-100%;
                 -webkit-transition:all .6s cubic-bezier(0.645, 0.045, 0.355, 1);
                         transition:all .6s cubic-bezier(0.645, 0.045, 0.355, 1);
+            }
+            .nav-list {
+                height: 100%;
+                flex-direction: column;
+                justify-content: center;
+                padding: 0 40px;
             }
             #header-primary-wrapper.active #nav-primary {
                 right:0;
